@@ -94,9 +94,9 @@ AMANDA_BSD_SECURITY
 AMANDA_BSDTCP_SECURITY
 AMANDA_BSDUDP_SECURITY
 AMANDA_RSH_SECURITY
+AMANDA_SSL_SECURITY
 AMANDA_SSH_SECURITY
 AMANDA_KRB5_SECURITY
-AMANDA_SSL_SECURITY
 
 #
 # Dumpers
