@@ -846,7 +846,8 @@ authenticate_request(S3Handle *hdl,
     char *szS3Date = NULL;
     char *zulu_date = NULL;
     char *buf = NULL;
-#if OPENSSL_VERSION_NUMBER < 0x10100000L
+#if (defined OPENSSL_VERSION_NUMBER && OPENSSL_VERSION_NUMBER < 0x10100000L) \
+    || defined LIBRESSL_VERSION_NUMBER
     HMAC_CTX ctx;
 #else
     HMAC_CTX *ctx;
@@ -1209,7 +1210,8 @@ authenticate_request(S3Handle *hdl,
 
 	/* run HMAC-SHA1 on the canonicalized string */
 	md = g_byte_array_sized_new(EVP_MAX_MD_SIZE+1);
-#if OPENSSL_VERSION_NUMBER < 0x10100000L
+#if (defined OPENSSL_VERSION_NUMBER && OPENSSL_VERSION_NUMBER < 0x10100000L) \
+    || defined LIBRESSL_VERSION_NUMBER
 	HMAC_CTX_init(&ctx);
 	HMAC_Init_ex(&ctx, hdl->secret_key, (int) strlen(hdl->secret_key),
 		     EVP_sha1(), NULL);
